--- a/test proj/shattered animation stuff/shattering-text-animation/index.html
+++ b/test proj/shattered animation stuff/shattering-text-animation/index.html
@@ -94,7 +94,7 @@
 <path d="M458.67,213.45l-0.02-1.62c-2.36,0.38-4.15,1.4-5.4,3.05l2.19,2.54L458.67,213.45z"/>
 </svg>
 </figure>
-<a href="file:///C:/Users/Amit/Desktop/test%20proj/popup.html">onboarding</a>
+<a href="../popup.html">onboarding</a>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
