[Neil] code reformat; readme update

--- a/test proj/mainUI.html
+++ b/test proj/mainUI.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <link rel="stylesheet" href="./resources/css/styles.css">
   <script src="./resources/js/mainUI.js"></script>
@@ -8,12 +7,10 @@
   <script defer src="./resources/js/firebase/firebase-auth.js"></script>
   <script defer src="./resources/js/firebase/firebase-firestore.js"></script>
   <script defer src="./resources/js/firebase/init-firebase.js"></script>
-
 </head>
-
 <body>
   <div id="titleDiv">
-    <H id="title">TAB HERO</H>
+    <h1 id="title">TAB HERO</h1>
   </div>
   <div id="tagInputDivContainer">
     <div id="tagInputDiv">
@@ -21,16 +18,12 @@
         placeholder="Save with custom name. Default name will be current date/time. "></textarea>
     </div>
   </div>
-  <div>
-
-  </div>
   <div class="col-md-3 col-sm-3 col-xs-6">
     <a href="#" id="collectionAddButton" class="btn btn-sm animated-button thar-three">Save All Open Tabs</a>
   </div>
   <div>
     <a href="#" id="tabHeroMainNavigationButton" class="btn btn-sm animated-button thar-one">My Tab Hero</a>
   </div>
-
   <h1>Login</h1>
   <form>
     <div class="form-row">
@@ -44,9 +37,6 @@
     </div>
   </form>
   <button type="button" class="btn" id="googleButton">Google Sign in</button>
-  
-
-<script src="./resources/js/firebase/auth.js"></script>
+  <script src="./resources/js/firebase/auth.js"></script>
 </body>
-
 </html>
